force-app/main/default/objects/tc9_imp__Imported_Timesheet__c/tc9_imp__Imported_Timesheet__c.object-meta.xml
<CustomObject>
    <label>Imported Timesheet</label>
    <nameField>
        <label>Imported Timesheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Imported Timesheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>