force-app/main/default/objects/tc9_imp__Imported_Timesheet__c/fields/tc9_imp__Break_1_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Break_1_Start_Time__c</fullName>
    <label>Break 1 Start Time</label>
    <type>Time</type>
</CustomField>