force-app/main/default/objects/tc9_imp__Imported_Timesheet__c/fields/tc9_imp__Break_2_Total__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Break_2_Total__c</fullName>
    <label>Break 2 Total</label>
    <length>255</length>
    <type>Text</type>
</CustomField>