force-app/main/default/objects/tc9_imp__Imported_Timesheet__c/fields/tc9_imp__Cost_Code_2__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Cost_Code_2__c</fullName>
    <label>Cost Code 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>