force-app/main/default/objects/tc9_imp__Imported_Timesheet__c/fields/tc9_imp__Cost_Code_2_Distribution__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Cost_Code_2_Distribution__c</fullName>
    <label>Cost Code 2 Distribution</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>