force-app/main/default/objects/tc9_imp__Imported_Timesheet__c/fields/tc9_imp__Error_message__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Error_message__c</fullName>
    <label>Error message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>