force-app/main/default/objects/tc9_imp__Imported_Timesheet__c/fields/tc9_imp__Is_Public_Holiday__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Is_Public_Holiday__c</fullName>
    <label>Is Public Holiday?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>