force-app/main/default/objects/tc9_imp__Imported_Timesheet__c/fields/tc9_imp__Manual_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Manual_Adjustment__c</fullName>
    <label>Manual Adjustment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>