force-app/main/default/objects/tc9_imp__Imported_Timesheet__c/fields/tc9_imp__Payee_Leave_Rule__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Payee_Leave_Rule__c</fullName>
    <label>Payee Leave Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>