force-app/main/default/objects/tc9_imp__Imported_Timesheet__c/fields/tc9_imp__Sucess__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Sucess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sucess</label>
    <type>Checkbox</type>
</CustomField>