force-app/main/default/objects/tc9_imp__Imported_Timesheet__c/fields/tc9_imp__TempTimesheet__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__TempTimesheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TempTimesheet</label>
    <referenceTo>tc9_et__Timesheet__c</referenceTo>
    <relationshipLabel>Imported Timesheets</relationshipLabel>
    <relationshipName>Imported_Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>