force-app/main/default/objects/tc9_imp__Imported_Timesheet__c/fields/tc9_imp__Timesheet__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Timesheet__c</fullName>
    <label>Timesheet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>