force-app/main/default/objects/tc9_imp__Imported_Timesheet__c/fields/tc9_imp__Timesheet_Activity__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Timesheet_Activity__c</fullName>
    <description>The timesheet activity external ID that was populated on the import file column “Timesheet Activity”</description>
    <inlineHelpText>The timesheet activity external ID that was populated on the import file column “Timesheet Activity”</inlineHelpText>
    <label>Timesheet Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>