force-app/main/default/objects/tc9_imp__Imported_Timesheet__c/fields/tc9_imp__Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Total_Hours__c</fullName>
    <label>Total Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>