force-app/main/default/objects/tc9_imp__Imported_Timesheet__c/fields/tc9_imp__Total_Hours_Calculated__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Total_Hours_Calculated__c</fullName>
    <formula>IF(ISBLANK(tc9_imp__Total_Time_in_hours__c),((tc9_imp__End_Time__c  - tc9_imp__Start_Time__c)- IF(AND(ISBLANK(tc9_imp__Break_1_End_Time__c),ISBLANK(tc9_imp__Break_1_Start_Time__c)),0,( tc9_imp__Break_1_End_Time__c - tc9_imp__Break_1_Start_Time__c ))-IF(AND(ISBLANK(tc9_imp__Break_2_End_Time__c),ISBLANK(tc9_imp__Break_2_Start_Time__c)),0,( tc9_imp__Break_2_End_Time__c - tc9_imp__Break_2_Start_Time__c ))) / 3600000 ,(VALUE(tc9_imp__Total_Time_in_hours__c ) + VALUE(tc9_imp__Total_Time_in_mins__c)/60 - (IF(ISBLANK(tc9_imp__Break_1_Total__c) ,0, VALUE(tc9_imp__Break_1_Total__c)/60) + IF(ISBLANK(tc9_imp__Break_2_Total__c) ,0, VALUE(tc9_imp__Break_2_Total__c)/60))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours Calculated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>