force-app/main/default/objects/tc9_imp__Imported_Timesheet__c/fields/tc9_imp__Total_Time_in_mins__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Total_Time_in_mins__c</fullName>
    <label>Total Time(in mins)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>